--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "^4.0.3",
-    
+    "react-scripts": "1.1.4",
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,7 @@
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "mocha": "^8.3.2",
+    "mocha": "^5.2.0",
     "sinon": "^6.1.0"
   }
 }
